* fixed missing masking of values after shifting them during inline     evaluation    o also only mask values when performing a constant evaluation of      "0 shl/shr x" during inline evaluation (just like when evaluating other      shl/shr operations)
git-svn-id: http://svn.freepascal.org/svn/fpc/trunk@43497 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/.gitattributes
+++ b/.gitattributes
@@ -14853,6 +14853,7 @@ tests/test/tinline9.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tinlrange1.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tinlrange2.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tinlrange3.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+tests/test/tinlrange4.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tint2str1.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tint2str2.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tint641.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
