--- a/.gitattributes
+++ b/.gitattributes
@@ -11129,6 +11129,9 @@ rtl/linux/riscv32/cprt0.as svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=nati
 rtl/linux/riscv32/dllprt0.as svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/linux/riscv32/gprt0.as svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/linux/riscv32/prt0.as svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/linux/riscv32/si_c.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/linux/riscv32/si_dll.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/linux/riscv32/si_prc.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/linux/riscv32/sighnd.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/linux/riscv32/sighndh.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/linux/riscv32/stat.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
