--- a/.gitattributes
+++ b/.gitattributes
@@ -11726,6 +11726,7 @@ rtl/riscv32/cpuh.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/riscv32/int64p.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/riscv32/makefile.cpu svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/riscv32/math.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/riscv32/mathu.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/riscv32/riscv32.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/riscv32/set.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/riscv32/setjump.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
