--- a/.gitattributes
+++ b/.gitattributes
@@ -14242,6 +14242,8 @@ tests/test/tblock1a.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tblock1c.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tblock2.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tblock2a.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+tests/test/tblock3a.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+tests/test/tblock3b.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 tests/test/tbopr.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tbrtlevt.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tbsx1.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
