Add possibility to set explicitly TEST_COMMENT variable, set as Comment field in dbdigest.cfg file (defaulting to TEST_OPT as before)
git-svn-id: http://svn.freepascal.org/svn/fpc/trunk@43897 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -2540,6 +2540,9 @@ SVN_COMPILER_REV_STR=$(shell $(SVNVERSION) -c ../compiler)
 SVN_RTL_REV_STR=$(shell $(SVNVERSION) -c ../rtl)
 SVN_PACKAGES_REV_STR=$(shell $(SVNVERSION) -c ../packages)
 endif
+ifeq ($(TEST_COMMENT),)
+TEST_COMMENT=$(TEST_OPT)
+endif
 $(TEST_OUTPUTDIR)/dbdigest.cfg:
 	$(ECHOREDIR) OS=$(TEST_OS_TARGET) > $(TEST_OUTPUTDIR)/dbdigest.cfg
 	$(ECHOREDIR) CPU=$(TEST_CPU_TARGET) >> $(TEST_OUTPUTDIR)/dbdigest.cfg
@@ -2550,7 +2553,7 @@ ifneq ($(TEST_USE_LONGLOG),)
 endif
 	$(ECHOREDIR) Submitter=$(TEST_USER) >> $(TEST_OUTPUTDIR)/dbdigest.cfg
 	$(ECHOREDIR) Machine=$(TEST_HOSTNAME) >> $(TEST_OUTPUTDIR)/dbdigest.cfg
-	$(ECHOREDIR) Comment=$(TEST_OPT) >> $(TEST_OUTPUTDIR)/dbdigest.cfg
+	$(ECHOREDIR) Comment=$(TEST_COMMENT) >> $(TEST_OUTPUTDIR)/dbdigest.cfg
 ifneq ($(TEST_DATETIME),)
 	$(ECHOREDIR) Date=$(TEST_DATETIME) >> $(TEST_OUTPUTDIR)/dbdigest.cfg
 endif
