--- a/.gitattributes
+++ b/.gitattributes
@@ -15667,6 +15667,7 @@ tests/test/units/cpu/tcpu1.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=
 tests/test/units/crt/tcrt.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/units/crt/tctrlc.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/units/dateutil/testscandatetime.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+tests/test/units/dateutil/tunitdt1.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 tests/test/units/dos/hello.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/units/dos/tbreak.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/units/dos/tdisk.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
@@ -15872,6 +15873,7 @@ tests/test/units/sysutils/tuplow.pp svn_mime_002dtype=text%2Fplain svn_eol_002ds
 tests/test/units/sysutils/twstralloc.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/units/sysutils/twstrcmp.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/units/ucomplex/tcsqr1.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+tests/test/units/unixutil/tepoch1.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 tests/test/units/variants/tcustomvariant.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/units/variants/tvararrayofintf.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/units/variants/tw26370.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
