--- a/rtl/embedded/Makefile.fpc
+++ b/rtl/embedded/Makefile.fpc
@@ -105,8 +105,12 @@ ifeq ($(SUBARCH),avrtiny)
 CPU_UNITS=attiny4 attiny5 attiny9 attiny10 attiny20 attiny40
 CPU_UNITS_DEFINED=1
 endif
+ifeq ($(SUBARCH),avr2)
+CPU_UNITS=attiny26
+CPU_UNITS_DEFINED=1
+endif
 ifeq ($(SUBARCH),avr25)
-CPU_UNITS=attiny44a attiny26 attiny48 attiny84a attiny2313 attiny461 attiny43u \
+CPU_UNITS=attiny44a attiny48 attiny84a attiny2313 attiny461 attiny43u \
           attiny24a attiny88 attiny861 attiny85 attiny24 \
           attiny87 attiny84 attiny13a attiny45 attiny828 attiny4313 attiny13 attiny261 \
           attiny861a attiny28 attiny44 attiny2313a attiny461a attiny261a attiny25
