--- a/.gitattributes
+++ b/.gitattributes
@@ -10547,6 +10547,7 @@ rtl/embedded/arm/mk22f51212.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle
 rtl/embedded/arm/mk64f12.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 rtl/embedded/arm/nrf51.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 rtl/embedded/arm/nrf52.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+rtl/embedded/arm/raspi2.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 rtl/embedded/arm/sam3x8e.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 rtl/embedded/arm/sc32442b.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 rtl/embedded/arm/stm32f0xx.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
